--- a/src/TheWorkBook.App/Platforms/iOS/Info.plist
+++ b/src/TheWorkBook.App/Platforms/iOS/Info.plist
@@ -26,6 +26,19 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>mauiessentials</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>bookstore</string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+		</dict>
+	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
 </dict>
